--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Django>=3.2.4,<3.3.0
-djangorestframework>=3.12.4,<3.13.0
-
-flake8>=3.9.2,<3.10.0
-
+Django==3.2.6
+djangorestframework==3.9.4
+flake8==3.6.0
+psycopg2==2.9.1
